Dropdown menu et rajout articles

--- a/sass/composant/_menu.scss
+++ b/sass/composant/_menu.scss
@@ -49,12 +49,16 @@
 }
 .menu-item{ //li
   margin-bottom: 60px;
-  font-size: clamp(2rem, 0.5rem + 8vw, 4rem);
+  font-size: clamp(2rem, 0.5rem + 6vw, 4rem);
   color: rgba(108, 183, 221, 0.795);
   @media screen and (min-width:700px) {
     color: black;
     margin-bottom: 7px;
     font-size: 1rem;
+    padding: 15px;
+    &:hover {
+      background-color: rgba(241, 171, 7, 0.95);
+    }
    }
 }
 
@@ -88,4 +92,21 @@
 
 #chk_burger:checked ~ .menu-principal-container {
   transform : translateX(0);
+}
+
+.container-taille ul {
+  @media screen and (min-width:700px) {
+    display: none;
+  }
+}
+
+.container-taille:hover > ul {
+  @media screen and (min-width:700px) {
+    display: block;
+    position: absolute;
+    z-index: 8;
+    background-color: rgba(241, 171, 7, 0.95);
+    padding: 10px;
+    margin-left: -15px;
+  }
 }
