--- a/sass/_entete.scss
+++ b/sass/_entete.scss
@@ -21,7 +21,7 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    padding-top : 1.5;
+    padding-top : 1.5rem;
     gap : 1.5rem;
     @media screen and (min-width:700px) {
         padding-top : 3rem;
