--- a/style.css
+++ b/style.css
@@ -300,7 +300,7 @@ body {
 
 .global > footer {
   flex: 0 1 1100px;
-  padding: 10rem 1rem;
+  padding: 5rem 1rem;
 }
 
 .entete__menu, .entete__header {
@@ -451,10 +451,11 @@ body {
   display: flex;
   justify-content: center;
   gap: 2rem;
+  margin-top: 4rem;
 }
 
 .sociaux svg {
-  fill: red;
+  fill: rgb(255, 72, 0);
 }
 
 .recherche {
@@ -465,6 +466,29 @@ body {
 
 .recherche__input {
   display: block;
+  background-color: rgb(58, 58, 136);
+  color: rgb(228, 228, 228);
+}
+.recherche__input::placeholder {
+  color: rgb(199, 199, 199);
+  /*margin-left: 5px;*/
+}
+
+.recherche__button {
+  background-image: linear-gradient(60deg, rgb(82, 82, 213), rgb(7, 7, 122));
+  padding: 5px;
+}
+
+input::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+  content: URL("images/delete.png");
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+}
+
+.icone-recherche {
+  color: rgb(228, 228, 228);
 }
 
 .section__cours {
@@ -512,7 +536,7 @@ body {
   width: 100vw;
   height: 100vh;
   transform: translateX(-200%);
-  background-image: linear-gradient(20deg, rgb(172, 90, 14), rgb(196, 149, 9));
+  background-image: linear-gradient(0deg, rgb(232, 95, 57), rgb(211, 157, 30));
   border: black 2px solid;
   padding: 5%;
   z-index: 10;
