--- a/sass/composant/_menu.scss
+++ b/sass/composant/_menu.scss
@@ -79,9 +79,15 @@
    }
 }
 
+/*Le menu se cache si l'on arrete de hover par dessus le nav entre 700px et 1100px de window width (A CORRIGER)*/
+
 .menu-item-89 {
   position: static;
   margin-top: 60px;
+  
+  @media screen and (min-width:700px) {
+    margin: auto;
+  }
 }
 
 #chk_burger{
@@ -105,6 +111,9 @@
 
 .container-taille ul {
     display: none;
+    &:hover {
+      display: block;
+    }
 
 }
 
