--- a/sass/composant/_slideshow.scss
+++ b/sass/composant/_slideshow.scss
@@ -3,9 +3,8 @@
 
    /* Slideshow container */
 .slideshow-container {
-    max-width: 1000px;
     position: relative;
-    margin: auto;
+    margin: 1rem;
   }
   
   /* Hide the images by default */
@@ -46,18 +45,22 @@
     font-size: 15px;
     padding: 8px 12px;
     position: absolute;
-    bottom: 8px;
+    bottom: 4px;
     width: 100%;
     text-align: center;
+    background-color: rgba(0, 0, 0, 0.6);
+    font-family: "Madimi One", sans-serif;
   }
   
   /* Number text (1/3 etc) */
   .numero__texte {
     color: #f2f2f2;
-    font-size: 12px;
+    font-size: 1rem;
     padding: 8px 12px;
     position: absolute;
     top: 0;
+    font-family: "Madimi One", sans-serif;
+    
   }
   
   /* The dots/bullets/indicators */
