--- a/style.css
+++ b/style.css
@@ -660,9 +660,8 @@ input::-webkit-search-cancel-button {
    Le diaporama aurait ete place au niveaux de la gallerie par dessus le texte et le blockquote*/
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
   position: relative;
-  margin: auto;
+  margin: 1rem;
 }
 
 /* Hide the images by default */
@@ -703,18 +702,21 @@ input::-webkit-search-cancel-button {
   font-size: 15px;
   padding: 8px 12px;
   position: absolute;
-  bottom: 8px;
+  bottom: 4px;
   width: 100%;
   text-align: center;
+  background-color: rgba(0, 0, 0, 0.6);
+  font-family: "Madimi One", sans-serif;
 }
 
 /* Number text (1/3 etc) */
 .numero__texte {
   color: #f2f2f2;
-  font-size: 12px;
+  font-size: 1rem;
   padding: 8px 12px;
   position: absolute;
   top: 0;
+  font-family: "Madimi One", sans-serif;
 }
 
 /* The dots/bullets/indicators */
