--- a/sass/composant/_slideshow.scss
+++ b/sass/composant/_slideshow.scss
@@ -1,18 +1,17 @@
-/* Testé avec MetaSlider et Soliloquy et les deux ne fonctionnent pas pour le moment present
-   Le diaporama aurait ete place au niveaux de la gallerie par dessus le texte et le blockquote*/
+/* Testé avec MetaSlider et Soliloquy et les deux ne fonctionnent pas pour le moment present*/
+/*Creation d'un slideshow custom par HMTL / JS*/
 
-   /* Slideshow container */
 .slideshow-container {
     position: relative;
     margin: 1rem;
   }
   
-  /* Hide the images by default */
+
   .images__slideshow {
     display: none;
   }
   
-  /* Next & previous buttons */
+
   .suivant, .precedent {
     cursor: pointer;
     position: absolute;
@@ -28,18 +27,18 @@
     user-select: none;
   }
   
-  /* Position the "next button" to the right */
+
   .suivant {
     right: 0;
     border-radius: 3px 0 0 3px;
   }
   
-  /* On hover, add a black background color with a little bit see-through */
+
   .precedent:hover, .suivant:hover {
     background-color: rgba(0,0,0,0.8);
   }
   
-  /* Caption text */
+
   .texte {
     color: #f2f2f2;
     font-size: 15px;
@@ -52,7 +51,7 @@
     font-family: "Madimi One", sans-serif;
   }
   
-  /* Number text (1/3 etc) */
+
   .numero__texte {
     color: #f2f2f2;
     font-size: 1rem;
@@ -63,7 +62,11 @@
     
   }
   
-  /* The dots/bullets/indicators */
+  .slogan__blockquote {
+    margin-top: 3rem;
+    margin-left: 16px;
+  }
+
   .point {
     cursor: pointer;
     height: 15px;
@@ -77,9 +80,8 @@
   
   .active, .point:hover {
     background-color: #717171;
-  }
-  
-  /* Fading animation */
+  }  
+
   .fondu {
     animation-name: fondu;
     animation-duration: 1.5s;
