--- a/style.css
+++ b/style.css
@@ -505,6 +505,8 @@ input::-webkit-search-cancel-button {
   align-items: center;
   flex: 1 0 252.5px;
   background-color: hsl(var(--hu1), var(--s-couleur-arriere), 75%);
+  border-radius: 20px;
+  border: ridge 2px black;
 }
 
 .carte * {
@@ -514,6 +516,11 @@ input::-webkit-search-cancel-button {
 .carte .post-categories {
   list-style-type: none;
   display: flex;
+}
+
+.carte h4::first-letter {
+  font-size: 1.3rem;
+  color: rgb(69, 52, 3);
 }
 
 /*
@@ -605,13 +612,33 @@ input::-webkit-search-cancel-button {
   }
 }
 
-/*Le menu se cache si l'on arrete de hover par dessus le nav entre 700px et 1100px de window width (A CORRIGER)*/
+/* Le menu se cache si l'on arrete de hover par dessus le nav entre 700px et 1100px de window width (A CORRIGER)
+   N'arrive que dans la page d'accueil*/
+/*Incapable de retirer les marqueurs de sous-menu de WordPress (A CORRIGER)*/
 .menu-item-89 {
   position: static;
   margin-top: 60px;
 }
 @media screen and (min-width: 700px) {
   .menu-item-89 {
+    margin: auto;
+  }
+}
+
+.menu-item-89 a {
+  margin-left: 3rem;
+}
+@media screen and (min-width: 700px) {
+  .menu-item-89 a {
+    margin-left: auto;
+  }
+}
+
+.menu-item-90 a {
+  margin-left: 3rem;
+}
+@media screen and (min-width: 700px) {
+  .menu-item-90 a {
     margin: auto;
   }
 }
@@ -656,20 +683,17 @@ input::-webkit-search-cancel-button {
   }
 }
 
-/* Testé avec MetaSlider et Soliloquy et les deux ne fonctionnent pas pour le moment present
-   Le diaporama aurait ete place au niveaux de la gallerie par dessus le texte et le blockquote*/
-/* Slideshow container */
+/* Testé avec MetaSlider et Soliloquy et les deux ne fonctionnent pas pour le moment present*/
+/*Creation d'un slideshow custom par HMTL / JS*/
 .slideshow-container {
   position: relative;
   margin: 1rem;
 }
 
-/* Hide the images by default */
 .images__slideshow {
   display: none;
 }
 
-/* Next & previous buttons */
 .suivant, .precedent {
   cursor: pointer;
   position: absolute;
@@ -685,18 +709,15 @@ input::-webkit-search-cancel-button {
   user-select: none;
 }
 
-/* Position the "next button" to the right */
 .suivant {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
 .precedent:hover, .suivant:hover {
   background-color: rgba(0, 0, 0, 0.8);
 }
 
-/* Caption text */
 .texte {
   color: #f2f2f2;
   font-size: 15px;
@@ -709,7 +730,6 @@ input::-webkit-search-cancel-button {
   font-family: "Madimi One", sans-serif;
 }
 
-/* Number text (1/3 etc) */
 .numero__texte {
   color: #f2f2f2;
   font-size: 1rem;
@@ -719,7 +739,11 @@ input::-webkit-search-cancel-button {
   font-family: "Madimi One", sans-serif;
 }
 
-/* The dots/bullets/indicators */
+.slogan__blockquote {
+  margin-top: 3rem;
+  margin-left: 16px;
+}
+
 .point {
   cursor: pointer;
   height: 15px;
@@ -735,7 +759,6 @@ input::-webkit-search-cancel-button {
   background-color: #717171;
 }
 
-/* Fading animation */
 .fondu {
   animation-name: fondu;
   animation-duration: 1.5s;
