--- a/style.css
+++ b/style.css
@@ -492,9 +492,11 @@ input::-webkit-search-cancel-button {
 }
 
 .section__cours {
+  max-width: 750px;
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
+  margin: 2.5rem;
 }
 
 .carte {
