--- a/sass/composant/_carte.scss
+++ b/sass/composant/_carte.scss
@@ -1,11 +1,22 @@
 
 
 .section__cours {
-    max-width: 750px;
+    max-width: 599px;
     display: flex;
     flex-wrap: wrap;
     gap : 1rem;
     margin: 2.5rem;
+    @media screen and (min-width:700px) {
+        max-width: 750px;
+    }
+}
+
+.arranger__populaire {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .carte {
@@ -32,4 +43,8 @@
 .carte h4::first-letter {
     font-size: 1.3rem;
     color: rgb(69, 52, 3);
+}
+
+.lien__carte {
+    text-decoration: underline;
 }
