--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 @charset "UTF-8";
 /*
-Theme Name: theme-gr2
+Theme Name: Escapar
 Theme URI: https://referenced.ca
-Author: Eddy Martin
+Author: Olivier Poulin
 Author URI: https://wordpress.org/
-Description: Thème de base développé dans le cours 4W4
+Description: Thème du TP1 de web
 Version: 1.0
 
 Requires PHP: 7.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: theme-gr2
+Text Domain: Escapar
 Ce thème a été développé dans le cadre du cours 4W4
 */
 /* ////////////////////////////////////////// */
@@ -492,11 +492,24 @@ input::-webkit-search-cancel-button {
 }
 
 .section__cours {
-  max-width: 750px;
+  max-width: 599px;
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
   margin: 2.5rem;
+}
+@media screen and (min-width: 700px) {
+  .section__cours {
+    max-width: 750px;
+  }
+}
+
+.arranger__populaire {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .carte {
@@ -523,6 +536,10 @@ input::-webkit-search-cancel-button {
 .carte h4::first-letter {
   font-size: 1.3rem;
   color: rgb(69, 52, 3);
+}
+
+.lien__carte {
+  text-decoration: underline;
 }
 
 /*
