Creer_page_carte_categories

--- a/sass/base/_h.scss
+++ b/sass/base/_h.scss
@@ -25,6 +25,10 @@ h2 {
     font-family: "Madimi One", sans-serif;
 }
 
+.texte_section {
+    margin-bottom: 2vw;
+}
+
 h3 {
 
    font-size: clamp(1.4375rem, 0.0313rem + 4.5vw, 3.125rem);
