--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,6 +24,7 @@ Ce thème a été développé dans le cadre du cours 4W4
 /* Class utile                            */
 /* ////////////////////////////////////////// */
 @import "utile/local";
+@import "utile/flexbox";
 
 /* ////////////////////////////////////////// */
 /* règles de base                             */
