centrer_flexbox_et_categories

--- a/style.css
+++ b/style.css
@@ -137,11 +137,21 @@ h3.bgc-text {
 }
 
 .flexbox {
-  margin-top: 1rem;
+  margin-top: 2vw;
+  padding: 2rem;
   display: flex;
   justify-content: space-between;
-  gap: 1rem;
+  gap: 1.5rem;
   flex-wrap: wrap;
+}
+@media screen and (min-width: 1100px) {
+  .flexbox {
+    padding: 0;
+  }
+}
+
+.flexbox .carte:nth-of-type(10) {
+  display: none;
 }
 
 /* ////////////////////////////////////////// */
