--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -83,10 +83,45 @@ body {
     position : relative;
 }
 
+.site__main {
+    font-family: "Madimi One", sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--couleur-arriere-accueil);
+    padding: 4rem;
+}
+
 .evenement__section {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.recherche__section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: nowrap;
+    flex: 0 1 1500px;
+    gap: 1rem;
+}
+
+.recherche__section article {
+    border: 5px rgba(0, 0, 0, 0.237) solid;
+    border-radius: 20px;
+    padding: 2rem;
+}
+
+.recherche__section article h5 {
+    font-size: 2rem;
+    text-align: center;
+    margin-bottom: 2%;
+    text-decoration: underline;
+}
+
+.recherche__section article hr {
+    display: none;
 }
 
 #footer {
