--- a/sass/composant/_carte.scss
+++ b/sass/composant/_carte.scss
@@ -28,8 +28,12 @@
 }
 
 .carte h4::first-letter {
-    font-size: 1.3rem;
+    font-size: 2.5rem;
     color: rgb(69, 52, 3);
+}
+
+.carte h4 {
+    font-size: 1.6rem;
 }
 
 .lien__carte {
