--- a/sass/composant/_menu.scss
+++ b/sass/composant/_menu.scss
@@ -49,10 +49,11 @@
  }
 
 }
+
 .menu-item{ //li
   margin-bottom: 60px;
   font-size: clamp(2rem, 0.5rem + 3vw, 2.5rem);
-  color: rgba(108, 183, 221, 0.795);
+  color: rgba(112, 108, 221, 0.852);
   @media screen and (min-width:700px) {
     color: black;
     margin-bottom: 7px;
@@ -134,6 +135,12 @@
   transform : translateX(0);
 }
 
+.container-taille>a {
+  &:active {
+    pointer-events: none;
+  }
+}
+
 .container-taille ul {
     display: none;
     &:hover {
@@ -167,4 +174,10 @@
 
 #menu-footer {
   list-style-type: none;
+}
+
+#menu-footer .menu-item {
+  margin: 30px;
+  font-size: clamp(1rem, 0.5rem + 1.5vw, 3rem);
+  color: black
 }
