--- a/sass/composant/_recherche.scss
+++ b/sass/composant/_recherche.scss
@@ -1,3 +1,4 @@
+/* ANCIENNE SEARCHBAR
 .recherche{
     display: flex;
     border : 1px solid #aaa;
@@ -10,7 +11,7 @@
     color: rgb(228, 228, 228);
     &::placeholder {
         color: rgb(199, 199, 199);
-       /*margin-left: 5px;*/
+       margin-left: 5px;
     }
 }
 
@@ -30,4 +31,37 @@ input::-webkit-search-cancel-button {
 
 .icone-recherche {
     color: rgb(228, 228, 228);
+}
+*/
+
+input::-webkit-search-cancel-button {
+    -webkit-appearance: none;
+    content: URL("images/delete.png");
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+}
+.recherche {
+    margin-right: 50px;
+    padding-bottom: 1rem;
+}
+
+.recherche__input {
+    font-family: "Madimi One", sans-serif;
+    padding: 0.5rem;
+    border-radius: 30px;
+    font-size: 1.5rem;
+    background-color: rgba(228, 228, 228, 0.911);
+    &::placeholder{
+        color: rgba(0, 0, 0, 0.275);
+    }
+}
+
+.recherche__bouton {
+    padding: 0.6rem;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.239);
+    &:hover {
+        background-color: rgba(255, 255, 255, 0.451);
+    }
 }
