--- a/style.css
+++ b/style.css
@@ -172,6 +172,10 @@ h1 {
   font-family: "Madimi One", sans-serif;
 }
 
+h1.page-title {
+  font-size: clamp(1.875rem, -1.25rem + 6vw, 5.625rem);
+}
+
 h2 {
   font-size: clamp(1.5625rem, -0.2604rem + 5.8333vw, 3.75rem);
   font-weight: bold;
@@ -354,10 +358,45 @@ body {
   position: relative;
 }
 
+.site__main {
+  font-family: "Madimi One", sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--couleur-arriere-accueil);
+  padding: 4rem;
+}
+
 .evenement__section {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.recherche__section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: nowrap;
+  flex: 0 1 1500px;
+  gap: 1rem;
+}
+
+.recherche__section article {
+  border: 5px rgba(0, 0, 0, 0.237) solid;
+  border-radius: 20px;
+  padding: 2rem;
+}
+
+.recherche__section article h5 {
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 2%;
+  text-decoration: underline;
+}
+
+.recherche__section article hr {
+  display: none;
 }
 
 #footer {
@@ -407,6 +446,7 @@ body {
   background-image: linear-gradient(90deg, var(--couleur-arriere-menu), var(--couleur-arriere-menu-2));
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   border: solid rgba(0, 0, 0, 0.115) 2px;
@@ -486,37 +526,72 @@ body {
   fill: rgb(255, 72, 0);
 }
 
-.recherche {
-  display: flex;
-  border: 1px solid #aaa;
-  justify-content: center;
+/* ANCIENNE SEARCHBAR
+.recherche{
+    display: flex;
+    border : 1px solid #aaa;
+    justify-content: center;
 }
 
-.recherche__input {
-  display: block;
-  background-color: rgb(58, 58, 136);
-  color: rgb(228, 228, 228);
-}
-.recherche__input::placeholder {
-  color: rgb(199, 199, 199);
-  /*margin-left: 5px;*/
+.recherche__input{
+    display: block;
+    background-color: rgb(58, 58, 136);
+    color: rgb(228, 228, 228);
+    &::placeholder {
+        color: rgb(199, 199, 199);
+       margin-left: 5px;
+    }
 }
 
-.recherche__button {
-  background-image: linear-gradient(60deg, rgb(82, 82, 213), rgb(7, 7, 122));
-  padding: 5px;
+
+.recherche__button{
+    background-image: linear-gradient(60deg, rgb(82, 82, 213), rgb(7, 7, 122));
+    padding: 5px;
 }
 
 input::-webkit-search-cancel-button {
+    -webkit-appearance: none;
+    content: URL("images/delete.png");
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+   }
+
+.icone-recherche {
+    color: rgb(228, 228, 228);
+}
+*/
+input::-webkit-search-cancel-button {
   -webkit-appearance: none;
   content: URL("images/delete.png");
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
   cursor: pointer;
 }
 
-.icone-recherche {
-  color: rgb(228, 228, 228);
+.recherche {
+  margin-right: 50px;
+  padding-bottom: 1rem;
+}
+
+.recherche__input {
+  font-family: "Madimi One", sans-serif;
+  padding: 0.5rem;
+  border-radius: 30px;
+  font-size: 1.5rem;
+  background-color: rgba(228, 228, 228, 0.911);
+}
+.recherche__input::placeholder {
+  color: rgba(0, 0, 0, 0.275);
+}
+
+.recherche__bouton {
+  padding: 0.6rem;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.239);
+}
+.recherche__bouton:hover {
+  background-color: rgba(255, 255, 255, 0.451);
 }
 
 .section__cours {
@@ -548,8 +623,12 @@ input::-webkit-search-cancel-button {
 }
 
 .carte h4::first-letter {
-  font-size: 1.3rem;
+  font-size: 2.5rem;
   color: rgb(69, 52, 3);
+}
+
+.carte h4 {
+  font-size: 1.6rem;
 }
 
 .lien__carte {
@@ -613,7 +692,7 @@ input::-webkit-search-cancel-button {
 .menu-item {
   margin-bottom: 60px;
   font-size: clamp(2rem, 0.5rem + 3vw, 2.5rem);
-  color: rgba(108, 183, 221, 0.795);
+  color: rgba(112, 108, 221, 0.852);
 }
 @media screen and (min-width: 700px) {
   .menu-item {
@@ -701,6 +780,10 @@ input::-webkit-search-cancel-button {
   transform: translateX(0);
 }
 
+.container-taille > a:active {
+  pointer-events: none;
+}
+
 .container-taille ul {
   display: none;
 }
@@ -731,6 +814,12 @@ input::-webkit-search-cancel-button {
 
 #menu-footer {
   list-style-type: none;
+}
+
+#menu-footer .menu-item {
+  margin: 30px;
+  font-size: clamp(1rem, 0.5rem + 1.5vw, 3rem);
+  color: black;
 }
 
 /* Testé avec MetaSlider et Soliloquy et les deux ne fonctionnent pas pour le moment present*/
