Retirer plugins non utilisés + recherche design

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -92,6 +92,12 @@ body {
     padding: 4rem;
 }
 
+.conteneur__recherche {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .evenement__section {
     display: flex;
     flex-direction: column;
