--- a/style.css
+++ b/style.css
@@ -361,16 +361,9 @@ body {
 .site__main {
   font-family: "Madimi One", sans-serif;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;
   background-color: var(--couleur-arriere-accueil);
   padding: 4rem;
-}
-
-.conteneur__recherche {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 }
 
 .evenement__section {
@@ -380,18 +373,20 @@ body {
 }
 
 .recherche__section {
+  max-height: fit-content;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex-wrap: nowrap;
-  flex: 0 1 1500px;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
   gap: 1rem;
+  margin-bottom: 3rem;
 }
 
 .recherche__section article {
   border: 5px rgba(0, 0, 0, 0.237) solid;
   border-radius: 20px;
   padding: 2rem;
+  flex: 0 1 900px;
 }
 
 .recherche__section article h5 {
@@ -576,13 +571,16 @@ input::-webkit-search-cancel-button {
 }
 
 .recherche {
-  margin-right: 50px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   padding-bottom: 1rem;
 }
 
 .recherche__input {
   font-family: "Madimi One", sans-serif;
   padding: 0.5rem;
+  margin-right: 10px;
   border-radius: 30px;
   font-size: 1.5rem;
   background-color: rgba(228, 228, 228, 0.911);
