--- a/style.css
+++ b/style.css
@@ -732,30 +732,30 @@ input::-webkit-search-cancel-button {
 /* Le menu se cache si l'on arrete de hover par dessus le nav entre 700px et 1100px de window width (A CORRIGER)
    N'arrive que dans la page d'accueil*/
 /*Incapable de retirer les marqueurs de sous-menu de WordPress (A CORRIGER)*/
-.menu-item-89 {
+.menu-item:nth-of-type(9) {
   position: static;
   margin-top: 60px;
 }
 @media screen and (min-width: 700px) {
-  .menu-item-89 {
+  .menu-item:nth-of-type(9) {
     margin: auto;
   }
 }
 
-.menu-item-89 a {
+.menu-item:nth-of-type(9) a {
   margin-left: 3rem;
 }
 @media screen and (min-width: 700px) {
-  .menu-item-89 a {
+  .menu-item:nth-of-type(9) a {
     margin-left: auto;
   }
 }
 
-.menu-item-90 a {
+.menu-item:nth-of-type(10) a {
   margin-left: 3rem;
 }
 @media screen and (min-width: 700px) {
-  .menu-item-90 a {
+  .menu-item:nth-of-type(10) a {
     margin: auto;
   }
 }
