--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -46,7 +46,7 @@ body {
 }
 
 .entete__menu, .entete__header {
-  flex : 0 1 1500px;
+  flex : 0 1 1300px;
   padding: 3rem 0 0 0 ;
    // min-height: 50vh;
    position : relative;
@@ -86,6 +86,7 @@ body {
 .site__main {
     font-family: "Madimi One", sans-serif;
     display: flex;
+    align-items: center;
     flex-direction: column;
     background-color: var(--couleur-arriere-accueil);
     padding: 4rem;
@@ -99,6 +100,7 @@ body {
 
 .recherche__section {
     max-height: fit-content;
+    width: 80vw;
     display: flex;
     flex-direction: row;
     justify-content: center;
