fonction images sans serveur

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,5 @@
 /*
-Theme Name: Escapar
+Theme Name: TP2
 Theme URI: https://referenced.ca
 Author: Olivier Poulin
 Author URI: https://wordpress.org/
