--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*
-Theme Name: Escapar
+Theme Name: TP2
 Theme URI: https://referenced.ca
 Author: Olivier Poulin
 Author URI: https://wordpress.org/
