fin pagination 404.php

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -52,5 +52,6 @@ Ce thème a été développé dans le cadre du cours 4W4
 @import "composant/carte";
 @import "composant/menu";
 @import "composant/slideshow";
+@import "composant/404";
 
 
