--- a/sass/_entete.scss
+++ b/sass/_entete.scss
@@ -9,12 +9,18 @@
 }
 
 .custom-logo {
-    width: 5%;
+    width: 12%;
     height: auto;
     position: fixed;
     top: 5px;
     right: 5px;
     z-index: 8;
+    @media screen and (min-width:700px) {
+        width: 7%;
+    }
+    @media screen and (min-width:1100px) {
+        width: 5.2%;
+    }
 }
 
 .entete__header {
