--- a/style.css
+++ b/style.css
@@ -196,6 +196,12 @@ h4 {
   font-family: "Fenix", serif;
 }
 
+h4.texte_404 {
+  font-family: "Fenix", serif;
+  font-size: clamp(1.4375rem, 0.0313rem + 2.5vw, 1.875rem);
+  margin-bottom: 15px;
+}
+
 h5 {
   font-family: "Fenix", serif;
 }
@@ -456,12 +462,22 @@ body {
 }
 
 .custom-logo {
-  width: 5%;
+  width: 12%;
   height: auto;
   position: fixed;
   top: 5px;
   right: 5px;
   z-index: 8;
+}
+@media screen and (min-width: 700px) {
+  .custom-logo {
+    width: 7%;
+  }
+}
+@media screen and (min-width: 1100px) {
+  .custom-logo {
+    width: 5.2%;
+  }
 }
 
 .entete__header {
@@ -907,4 +923,27 @@ input::-webkit-search-cancel-button {
   to {
     opacity: 1;
   }
+}
+.assembler_404 {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  align-items: center;
+  flex: 0 1 1100px;
+}
+
+.image_404 {
+  display: none;
+}
+@media screen and (min-width: 700px) {
+  .image_404 {
+    display: block;
+    width: 50%;
+    height: auto;
+  }
+}
+
+.ensemble_404 {
+  display: flex;
 }/*# sourceMappingURL=style.css.map */
