--- a/sass/composant/_404.scss
+++ b/sass/composant/_404.scss
@@ -1,3 +1,8 @@
+.gabarit_404 {
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+}
+
 .assembler_404 {
     display: flex;
     flex-direction: row;
@@ -5,6 +10,7 @@
     justify-content: space-around;
     align-items: center;
     flex: 0 1 1100px;
+    text-align: center;
 }
 
 .image_404 {
@@ -18,6 +24,10 @@
 
 .ensemble_404 {
     display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    padding: 5%;
 }
 
 .conteneur_404 {
@@ -49,4 +59,22 @@
     @media screen and (min-width:1100px) {
         font-size: 2vw;
     }
+}
+
+.les_categories {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 1rem;
+    margin-top: 2rem;
+    margin-bottom: 4rem;
+    @media screen and (min-width:700px) {
+        flex-wrap: nowrap;
+    }
+}
+
+.une_categorie {
+    list-style: none;
+    margin-top: 0.5rem;
 }
