--- a/sass/composant/_404.scss
+++ b/sass/composant/_404.scss
@@ -77,4 +77,9 @@
 .une_categorie {
     list-style: none;
     margin-top: 0.5rem;
+    padding: 0.5rem;
+    border-radius: 50px;
+    &:hover {
+        background-color: rgba(255, 255, 255, 0.319);
+    }
 }
