--- a/style.css
+++ b/style.css
@@ -1009,4 +1009,9 @@ input::-webkit-search-cancel-button {
 .une_categorie {
   list-style: none;
   margin-top: 0.5rem;
+  padding: 0.5rem;
+  border-radius: 50px;
+}
+.une_categorie:hover {
+  background-color: rgba(255, 255, 255, 0.319);
 }/*# sourceMappingURL=style.css.map */
