--- a/sass/base/_h.scss
+++ b/sass/base/_h.scss
@@ -64,6 +64,11 @@ p {
     font-family: "Fenix", serif;
 }
 
+.texte_pays {
+    text-align: justify;
+    width: 60%;
+}
+
 ul {
     font-family: "Madimi One", sans-serif;
 }
